# Kommies

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml
Backend/Backend/: urls.py
api/: .env.example  README.md  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 0bb740fdbf8b_add_site_members.py  3e40ab0db1c0_add_password_reset_fields_to_super_users.py  83f8a378cfa7_add_is_admin_to_super_users.py  a10197564ab6_add_commenter_accounts.py  c5f2e8b91d4a_add_email_verification_to_super_users.py
api/app/: main.py  scheduler.py
api/app/api/: deps.py
api/app/core/: config.py  security.py
api/app/models/: __init__.py  auth_billing.py  core_moderation_analytics.py
api/app/schemas/: auth.py  core.py
api/app/services/: email.py  webhooks.py
api/app/static/: kommies.js
api/tests/: test_basic.py
backend/: .env.example  README.md  manage.py  requirements.txt
backend/apps/commenter_portal/: urls.py  views.py
backend/apps/dashboard/: access.py  admin.py  context_processors.py  email.py  forms.py  models.py  urls.py  view_helpers.py  views.py
backend/apps/moderation/: models.py
backend/config/: settings.py  urls.py
backend/static/css/: dashboard.css
backend/static/js/: utils.js
backend/templates/: base.html
backend/templates/commenter/: base.html  forgot_password.html  history.html  login.html  profile.html  register.html  reset_password.html  settings.html  verify_email.html
backend/templates/dashboard/: _ban_table.html  (+8 more)
comment_platform/: .env.example  requirements.txt
comment_platform/app/: main.py
(+38 files in other folders)
